<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.rodrigo.acessoproject.ui.document.AddDocumentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="@color/colorPrimary"/>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/status"
            app:layout_scrollFlags="scroll|enterAlways">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorText"
                android:text="@string/activity_new_document"/>

        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="16sp"
                    android:layout_marginTop="32dp"
                    android:textColor="@color/colorText"
                    android:text="@string/activity_new_document_title"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:textColor="@color/colorText"
                    android:text="@string/activity_new_document_subtitle"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="6dp"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:text="@string/hint_full_name"/>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/edit_text_background"
                        android:inputType="textPersonName"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:layout_marginTop="18dp"
                        android:text="@string/hint_rg_number"/>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_rg_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:background="@drawable/edit_text_background"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:layout_marginTop="18dp"
                        android:text="@string/hint_birth_date"/>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_date"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:background="@drawable/edit_text_background"/>

                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:text="@string/acitivty_new_document_add_photos"
                    android:textSize="12sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_marginTop="32dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical">


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_photo_front"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@mipmap/ic_camera"
                        android:padding="16dp"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/button_photo_front"
                        android:textColor="@color/colorButtonText"
                        android:gravity="start|center"
                        android:drawablePadding="16dp"
                        android:background="@null"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorBackground"/>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_photo_back"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@mipmap/ic_camera"
                        android:text="@string/button_photo_back"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorButtonText"
                        android:padding="16dp"
                        android:gravity="start|center"
                        android:drawablePadding="16dp"
                        android:background="@null" />

                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/colorAccent"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/button_save_document"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
