<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rodrigo.acessoproject.ui.document.DocumentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorBackground">

            <View
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="@color/colorPrimary"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/document_rg"/>

                <Button
                    android:id="@+id/document_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_gravity="end"
                    android:textColor="@color/colorAccent"
                    android:text="@string/edit"/>

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="32dp"
                android:paddingBottom="32dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/document_information"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/colorText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="6dp"
                    android:paddingStart="16dp"
                    android:paddingTop="32dp"
                    android:paddingBottom="32dp"
                    android:background="@color/colorPrimary">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/hint_full_name"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/document_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:text="@string/hint_rg_number"
                        android:layout_marginTop="32dp"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/document_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/hint_birth_date"
                        android:layout_marginTop="32dp"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/document_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"/>

                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/document_photos"
                    android:layout_marginTop="32dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/colorText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="6dp"
                    android:background="@color/colorPrimary">

                    <LinearLayout
                        android:id="@+id/image_document_front"
                        android:layout_width="match_parent"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:layout_height="60dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@+id/document_image_front"
                            android:layout_width="44dp"
                            android:layout_height="44dp"
                            android:src="@mipmap/ic_rg"
                            android:layout_gravity="center_vertical" />

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:text="@string/button_photo_front"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorBackground"/>

                    <LinearLayout
                        android:id="@+id/image_document_back"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatImageView
                            android:id="@+id/document_image_back"
                            android:layout_width="44dp"
                            android:layout_height="44dp"
                            android:src="@mipmap/ic_rg"
                            android:layout_gravity="center_vertical"/>

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:textStyle="bold"
                            android:textSize="12sp"
                            android:text="@string/button_photo_back"
                            android:layout_gravity="center_vertical"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
