<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rodrigo.acessoproject.ui.user.UserActivity"
    tools:showIn="@layout/activity_user">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/activity_user_contact"
            android:textColor="@color/colorText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/colorPrimary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/activity_user_email"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_user_phone"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_user_address"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/user_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
